# sequential-gpu

./: .gitignore  CMakeLists.txt  README.md  cmakebuild.sh  nvprof_analysis_loop_histogram  time_full_pipeline_basic_histo
data/: histogram.csv  padded_test.ppm  test_gray.ppm
results_dir/: benchmark_naive_histogram  nvprof_analysis_noloop_naive_histo  nvprof_global_metrics_noloop_naive_histo  nvprof_metrics_loop_histogram  results_gpu_block_histogram  time_results_cudaMalloc  time_results_cudaMallocManaged  time_results_shared_histogram
src/: Patch clustering and Patch classification.ipynb  main.cc  main.cu  save.hh  tests.cu  tests.hh  timer.cu  timer.hh
src/block/: block.cc  block.cu  block.hh  blocks.cc  blocks.cu  blocks.hh
src/gpu/: block-gpu.cu  block-gpu.hh  blocks-gpu.cu  blocks-gpu.hh  canonical-gpu.cc  canonical-gpu.cu  canonical-gpu.hh  image-gpu.cu  image-gpu.hh  kmeans-gpu.cu  kmeans-gpu.hh
src/image/: image.cc  image.cu  image.hh  stb_image.h
src/kmeans/: kmeans-gpu.cu  kmeans-gpu.hh  kmeans.cu  kmeans.hh
src/utils/: save.hh  timer.cu  timer.hh  utils.cu  utils.hh
